html and css complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </head>
     <body>
 		<div id="container">
-			<div class="clockFill hourFill-75"></div>
+			<div class="clockFill hourFill hourFill-59"></div>
+			<div class="clockFill minuteFill minuteFill-30"></div>
+			<div class="clockFill secondFill secondFill-78"></div>
 		</div>
     </body>
 </html>
