added number dots

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
 			<div class="clockFill hourFill hourFill-0"></div>
 			<div class="clockFill minuteFill minuteFill-0"></div>
 			<div class="clockFill secondFill secondFill-0"></div>
+
+			<div class="clockNum clockNum-1"></div>
+			<div class="clockNum clockNum-2"></div>
+			<div class="clockNum clockNum-3"></div>
+			<div class="clockNum clockNum-4"></div>
+			<div class="clockNum clockNum-5"></div>
+			<div class="clockNum clockNum-6"></div>
+			<div class="clockNum clockNum-7"></div>
+			<div class="clockNum clockNum-8"></div>
+			<div class="clockNum clockNum-9"></div>
+			<div class="clockNum clockNum-10"></div>
 		</div>
     </body>
 </html>
