remove unused css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Decimal Clock</title>
         <meta name="description" content="A Clock Based on Decimal Time">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico in the root directory -->
+        <link rel="icon" type="image/png" href="icon.png" sizes="32x32">
         
         <link rel="stylesheet" href="style.css">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
